correccion img sin etiqueta de cierre

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="row mb-5">
 
                 <div class="col">
-                    <img style="height: 400px" src="img/imagen-muestra2.png" class="d-block w-100" alt="...">
+                    <img style="height: 400px" src="img/imagen-muestra2.png" class="d-block w-100" alt="..."/>
                 </div>
 
                 <div class="col mb-5 d-flex align-items-center ">
