--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/valoros.css" />
     <link rel="icon" href="img/LogoValoros -icono.jpg" />
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -58,13 +59,13 @@
             <div class="d-none d-sm-flex justify-content-center">
                 <ul class="d-flex h-100">
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="corporativo.html">Corporativo</a>
+                        <a class="nav-link fs-4" href="contenido/corporativo.html">Corporativo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="sostenibilidad.html">Sostenibilidad</a>
+                        <a class="nav-link fs-4" href="contenido/sostenibilidad.html">Sostenibilidad</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="contacto.html">Contáctenos</a>
+                        <a class="nav-link fs-4" href="contenido/contacto.html">Contáctenos</a>
                     </li>
                 </ul>
             </div>
@@ -89,87 +90,34 @@
                                 </svg>
                             </a>
                             <ul class="submenu">
-                                <li class="has-submenu">
-                                    <a class="nav-link" href="#">Oro</a>
-                                    <ul class="submenu">
-                                        <li><a class="nav-link" href="#">Oro Puro</a></li>
-                                        <li><a class="nav-link" href="#">Cianuro de Oro y Potasio</a></li>
-                                        <li><a class="nav-link" href="#">Hilo de Oro</a></li>
-                                    </ul>
+                                <li>
+                                    <a class="nav-link" href="contenido/lineaoro.html">Linea de Oro</a>
                                 </li>
-                                <li class="has-submenu">
-                                    <a href="#">Plata</a>
-                                    <ul class="submenu">
-                                        <li><a class="nav-link" href="#">Ánodos de Plata</a></li>
-                                        <li><a class="nav-link" href="#">Cianuro de Plata</a></li>
-                                        <li><a class="nav-link" href="#">Cianuro de Plata y Potasio</a></li>
-                                        <li><a class="nav-link" href="#">Hilo de Plata</a></li>
-                                        <li><a class="nav-link" href="#">Nitrato de Plata</a></li>
-                                        <li><a class="nav-link" href="#">Plata Pura</a></li>
-                                    </ul>
+                                <li>
+                                    <a class="nav-link" href="contenido/lineaplata.html">Linea de Plata</a>
                                 </li>
                             </ul>
                         </li>
 
-                        <li class="has-submenu p-0">
-                            <a class="h-100 py-2 p-2" href="#">Servicios</a>
-                            <ul class="submenu">
-                                <li>
-                                    <a class="nav-link" href="#">Fundición de Metales Preciosos</a>
-                                </li>
-                                <li>
-                                    <a class="nav-link" href="#">Refinación de Metales Preciosos</a>
-                                </li>
-                            </ul>
+                        <li>
+                            <a class="h-100 p-2" href="contenido/Servicios.html">Servicios Metalúrgicos</a>
                         </li>
 
                     </ul>
                 </nav>
             </section>
-
             <!-- fin menu:productos-servicios -->
 
-            <!-- carousel -->
-
-            <!-- <section class="mb-5">
-
-                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item height-50vh active">
-                            <img style="height: 500px" src="img/IMG_9787.JPG" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item height-50vh">
-                            <img style="height: 500px" src="img/Chemical hero.jpg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item height-50vh">
-                            <img style="height: 500px" src="img/industry.jpg" class="d-block w-100" alt="...">
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
-
-            </section> -->
-
+            <!-- video -->
             <section class="hero-section">
                 <video class="video-background" autoplay loop muted playsinline>
                     <source src="img/CORPORATIVO.mp4" type="video/mp4">
                     Tu navegador no admite la reproducción de videos.
                 </video>
             </section>
-
-            <!-- fin carousel -->
+            <!-- fin video -->
 
             <!-- presentation -->
-
             <section class="mt-5 px-5">
 
                 <h1 class="text-center mb-5 title">BIENVENIDOS A VALOROS DE COLOMBIA</h1>
@@ -184,13 +132,10 @@
                 </p>
 
             </section>
-
             <!-- fin presentation -->
 
             <!-- image+presentation -->
             <section class="row mb-5 px-5">
-
-                <!-- <div class="row mb-5"> -->
 
                 <div class="col-12 col-lg-6 mb-3">
                     <img style="border-radius: 5px;" src="img/Oro-plata.png" class="d-block w-100" alt="..." />
@@ -204,7 +149,6 @@
                     </p>
                 </div>
 
-                <!-- </div> -->
             </section>
 
 
@@ -237,7 +181,7 @@
 
 
 
-        <footer class="bg-white">
+        <!-- <footer class="bg-white">
             <hr class="m-0">
             <div class="row row-cols-1 row-cols-sm-2 px-5 py-3">
                 <div class="col text-center">
@@ -256,6 +200,29 @@
                 <p class="py-3">Copyright © 2023 Valoros de Colombia</p>
             </div>
 
+        </footer> -->
+
+        <footer>
+            <div class="contact">
+                <div class="item_contact">
+                    <i class='bx bx-copyright contact_icon'></i>
+                    <h3 class="contact_title">Valoros de colombia SAS</h3>
+                </div>
+                <div class="item_contact">
+                    <i class='bx bx-mail-send contact_icon'></i>
+                    <h3 class="contact_title">info@valoros.co</h3>
+                    <h3 class="contact_title">Tel.: +604 3629056</h3>
+                    <h3 class="contact_title">Cel/wp: +57 3012784797</h3>
+                </div>
+                <div class="item_contact">
+                    <i class='bx bxs-edit-location contact_icon'></i>
+                    <h3 class="contact_title">Medellín - Antioquia</h3>
+                </div>
+                <div class="item_contact item_contact--gold">
+                    <i class='bx bxs-chat contact_icon contact_icon--modifier'></i>
+                    <h3 class="contact_title">Contactanos ahora</h3>
+                </div>
+            </div>
         </footer>
 
     </div>
