--- a/contenido/Servicios.html
+++ b/contenido/Servicios.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="../css/valoros.css" />
     <link rel="icon" href="../img/LogoValoros -icono.jpg" />
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-    
+
 </head>
 
 <body>
 
-    <div class="container">
+    <div class="container p-0">
 
         <!-- logo-menu -->
         <header class="d-flex justify-content-between">
@@ -50,10 +50,10 @@
 
 
 
-        <main class="bg-white mx-auto mb-1">
+        <main class="mx-auto">
 
-             <!-- menu:productos-servicios -->
-             <section class="p-0 m-0">
+            <!-- menu:productos-servicios -->
+            <section class="p-0 m-0">
                 <nav class="dark p-0 m-0">
                     <ul class="p-0 m-0">
 
@@ -77,7 +77,8 @@
                         </li>
 
                         <li>
-                            <a class="h-100 p-2" style="color: #F3B830;" href="Servicios.html">Servicios metalúrgicos</a>
+                            <a class="h-100 p-2" style="color: #F3B830;" href="Servicios.html">Servicios
+                                metalúrgicos</a>
                         </li>
 
                     </ul>
@@ -85,57 +86,62 @@
             </section>
             <!-- fin menu:productos-servicios -->
 
-            <section>
+            <section class="mt-5 px-5">
 
-                <hr class="mt-0">
-                <br>
                 <h1 class="text-center mb-5">SERVICIOS METALÚRGICOS</h1>
 
-
-                <p class="fs-5 mb-5">
+                <p class="mb-3">
                     Prestamos servicios metalurgicos para Oro y Plata según aleaciones o requerimientos de nuestros
                     clientes.
                 </p>
 
+                <div class="row">
 
-                <h4>FUNDICIÓN DE METALES PRECIOSOS</h4>
-                <P>
-                    Fundición en horno de inducción.
-                    Pureza inicial y final certificada
-                    Consulte información técnica
-                </P>
+                    <div class="col-12 col-sm-6 mb-3">
+                        <img class="w-100 rounded" src="../img/img-servicioInspeccion.jpg" alt="">
+                    </div>
 
-                <img class="w-25" src="../img/img-servicioInspeccion.jpg" alt="">
+                    <div class="col-12 col-sm-6">
+                        <h5>FUNDICIÓN DE METALES PRECIOSOS</h5>
+                        <P class="mb-5">
+                            Fundición en horno de inducción.
+                            Pureza inicial y final certificada
+                            Consulte información técnica
+                        </P>
+                        <h5>REFINACION DE METALES PRECIOSOS</h5>
+                        <P>
+                            Refinación de oro según requerimientos de nuestros clientes.
+                            Pureza de 99,99 certificada
+                            Consulte información técnica
+                        </P>
+                    </div>
 
-                <h4>REFINACION DE METALES PRECIOSOS</h4>
-                <P>
-                    Refinación de oro según requerimientos de nuestros clientes.
-                    Pureza de 99,99 certificada
-                    Consulte información técnica
-                </P>
+                   
+
+                </div>
 
             </section>
-
+            <br>
         </main>
 
 
         <footer>
-            <div class="contact">
-                <div class="item_contact">
+            <div class="contact row row-cols-1 row-cols-sm-4 m-0">
+                <div class="item_contact col">
                     <i class='bx bx-copyright contact_icon'></i>
                     <h3 class="contact_title">Valoros de colombia SAS</h3>
                 </div>
-                <div class="item_contact">
+                <div class="item_contact col">
                     <i class='bx bx-mail-send contact_icon'></i>
                     <h3 class="contact_title">info@valoros.co</h3>
                     <h3 class="contact_title">Tel.: +604 3629056</h3>
                     <h3 class="contact_title">Cel/wp: +57 3012784797</h3>
                 </div>
-                <div class="item_contact">
+                <div class="item_contact col">
                     <i class='bx bxs-edit-location contact_icon'></i>
                     <h3 class="contact_title">Medellín - Antioquia</h3>
                 </div>
-                <div class="item_contact item_contact--gold">
+                <div class="item_contact item_contact--gold col">
                     <i class='bx bxs-chat contact_icon contact_icon--modifier'></i>
                     <h3 class="contact_title">Contactanos ahora</h3>
                 </div>
