--- a/contenido/contacto.html
+++ b/contenido/contacto.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <div class="container">
+    <div class="container p-0">
 
         <!-- logo-menu -->
         <header class="d-flex justify-content-between">
@@ -46,7 +46,7 @@
         </header>
         <!-- logo-menu -->
 
-        <main class="bg-white mx-auto">
+        <main class="mx-auto">
 
             <!-- menu:productos-servicios -->
             <section class="p-0 m-0">
@@ -81,10 +81,9 @@
             </section>
             <!-- fin menu:productos-servicios -->
 
-            <section class="container px-5">
-                <hr class="mt-0">
-
-                <h1 class="text-center mb-5">Contacto</h1>
+            <section class="mt-5 px-5">
+                
+                <h1 class="text-center mb-5">CONTACTO</h1>
 
                 <div class="row mb-5">
 
@@ -155,22 +154,22 @@
         </main>
 
         <footer>
-            <div class="contact">
-                <div class="item_contact">
+            <div class="contact row row-cols-1 row-cols-sm-4 m-0">
+                <div class="item_contact col">
                     <i class='bx bx-copyright contact_icon'></i>
                     <h3 class="contact_title">Valoros de colombia SAS</h3>
                 </div>
-                <div class="item_contact">
+                <div class="item_contact col">
                     <i class='bx bx-mail-send contact_icon'></i>
                     <h3 class="contact_title">info@valoros.co</h3>
                     <h3 class="contact_title">Tel.: +604 3629056</h3>
                     <h3 class="contact_title">Cel/wp: +57 3012784797</h3>
                 </div>
-                <div class="item_contact">
+                <div class="item_contact col">
                     <i class='bx bxs-edit-location contact_icon'></i>
                     <h3 class="contact_title">Medellín - Antioquia</h3>
                 </div>
-                <div class="item_contact item_contact--gold">
+                <div class="item_contact item_contact--gold col">
                     <i class='bx bxs-chat contact_icon contact_icon--modifier'></i>
                     <h3 class="contact_title">Contactanos ahora</h3>
                 </div>
