--- a/contenido/lineaoro.html
+++ b/contenido/lineaoro.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <div class="container">
+    <div class="container p-0">
 
         <!-- logo-menu -->
         <header class="d-flex justify-content-between">
@@ -46,7 +46,7 @@
         </header>
         <!-- logo-menu -->
 
-        <main class="bg-white mx-auto mb-1">
+        <main class="mx-auto">
 
             <!-- menu:productos-servicios -->
             <section class="p-0 m-0">
@@ -81,62 +81,66 @@
             </section>
             <!-- fin menu:productos-servicios -->
 
-            <section>
+            <section class="mt-5 px-5">
 
-                <hr class="mt-0">
-                <br>
                 <h1 class="text-center mb-5">LINEA DE ORO</h1>
 
-
-                <p class="fs-5 mb-5">
+                <p class="mb-3">
                     Ofrecemos a nuestros clientes un portafolio de productos a partir de metales preciosos en nuestra
                     linea de Oro
                 </p>
 
+                <div class="row">
+                    <div class="col-12 col-sm-6">
+                        <h5>ORO</h5>
+                        <P class="mb-4">
+                            Oro en barra, lamina o granulado.
+                            Pureza de 99,99 certificada.
+                            Consulte información técnica
+                        </P>
 
-                <h4>ORO</h4>
-                <P>
-                    Oro en barra, lamina o granulado.
-                    Pureza de 99,99 certificada.
-                    Consulte información técnica
-                </P>
+                        <h5>CIANURO DE ORO POTASIO</h5>
+                        <P class="mb-4">
+                            Disponible a partir de Enero 2024
+                            Consulte información tecnica
+                        </P>
+
+                        <h5>HILO DE ORO</h5>
+                        <p>Disponible a partir de Enero 2024
+                            Consulte información tecnica
+                        </p>
+                    </div>
+                    <div class="col-12 col-sm-6">
+                        <img class="w-100 mb-2 rounded" src="../img/IMG_3917.JPEG" alt="">
+                        <img class="w-100 mb-4 rounded" src="../img/3.jpg" alt="">                        
+                    </div>
+                </div>
 
 
-                <h4>CIANURO DE ORO POTASIO</h4>
-                <P>
-                    Disponible a partir de Enero 2024
-                    Consulte información tecnica
-                </P>
 
-                <h4>HILO DE ORO</h4>
-                <p>Disponible a partir de Enero 2024
-                    Consulte información tecnica
-                </p>
 
-                <img class="w-50" src="../img/3.jpg" alt="">
-                <img class="w-50" src="../img/IMG_3917.JPEG" alt="">
 
             </section>
 
         </main>
 
         <footer>
-            <div class="contact">
-                <div class="item_contact">
+            <div class="contact row row-cols-1 row-cols-sm-4 m-0">
+                <div class="item_contact col">
                     <i class='bx bx-copyright contact_icon'></i>
                     <h3 class="contact_title">Valoros de colombia SAS</h3>
                 </div>
-                <div class="item_contact">
+                <div class="item_contact col">
                     <i class='bx bx-mail-send contact_icon'></i>
                     <h3 class="contact_title">info@valoros.co</h3>
                     <h3 class="contact_title">Tel.: +604 3629056</h3>
                     <h3 class="contact_title">Cel/wp: +57 3012784797</h3>
                 </div>
-                <div class="item_contact">
+                <div class="item_contact col">
                     <i class='bx bxs-edit-location contact_icon'></i>
                     <h3 class="contact_title">Medellín - Antioquia</h3>
                 </div>
-                <div class="item_contact item_contact--gold">
+                <div class="item_contact item_contact--gold col">
                     <i class='bx bxs-chat contact_icon contact_icon--modifier'></i>
                     <h3 class="contact_title">Contactanos ahora</h3>
                 </div>
