--- a/contenido/lineaplata.html
+++ b/contenido/lineaplata.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <div class="container">
+    <div class="container p-0">
 
         <!-- logo-menu -->
         <header class="d-flex justify-content-between">
@@ -46,7 +46,7 @@
         </header>
         <!-- logo-menu -->
 
-        <main class="bg-white mx-auto mb-1">
+        <main class="mx-auto">
 
             <!-- menu:productos-servicios -->
             <section class="p-0 m-0">
@@ -81,89 +81,96 @@
             </section>
             <!-- fin menu:productos-servicios -->
 
-            <section>
+            <section class="mt-5 px-5">
 
-                <hr class="mt-0">
-                <br>
-                <h1 class="text-center mb-5">LINEA DE PLATA</h1>
+                <h1 class="text-center mb-4">LINEA DE PLATA</h1>
 
-
-                <p class="fs-5 mb-5">
+                <p class="mb-5">
                     Ofrecemos a nuestros clientes un portafolio de productos a partir de metales preciosos en nuestra
                     linea de Plata
                 </p>
 
+                <div class="row align-items-center">
+                    <div class="col">
+                        <h5>ANODO DE PLATA</h5>
+                        <P>
+                            Anodo de Plata según especificación del cliente
+                            Pureza de 99,99 certificada
+                            Consulte información técnica
+                        </P>
 
-                <h4>ANODO DE PLATA</h4>
-                <P>
-                    Anodo de Plata según especificación del cliente
-                    Pureza de 99,99 certificada
-                    Consulte información técnica
-                </P>
+                        <h5>CIANURO DE PLATA</h5>
+                        <P>
+                            Cianuro de Plata en polvo
+                            Pureza de 99,99 certificada
+                            Concentración de plata 54,2%.
+                            Consulte información técnica
+                        </P>
 
-                <h4>CIANURO DE PLATA</h4>
-                <P>
-                    Cianuro de Plata en polvo
-                    Pureza de 99,99 certificada
-                    Concentración de plata 54,2%.
-                    Consulte información técnica
-                </P>
+                        <h5>CIANURO DE PLATA Y POTASIO</h5>
+                        <p>
+                            Cianuro de Plata Potasio en polvo
+                            Pureza de 99,99 certificada
+                            Concentración de plata 54,2%.
+                            Consulte información tecnica
+                        </p>
+                    </div>
+                    <div class="col">
+                        <img class="w-100 rounded" src="../img/IMG_9762.JPG" alt="">
+                    </div>
+                </div>
 
-                <h4>CIANURO DE PLATA Y POTASIO</h4>
-                <p>
-                    Cianuro de Plata Potasio en polvo
-                    Pureza de 99,99 certificada
-                    Concentración de plata 54,2%.
-                    Consulte información tecnica
-                </p>
+                <div class="row align-items-center">
+                    <div class="col">
+                        <img class="w-100 rounded" src="../img/IMG_9784.JPG" alt="">
+                    </div>
+                    <div class="col">
+                        <h5>HILO DE PLATA</h5>
+                        <P>
+                            Disponible a partir de Enero 2024
+                            Consulte información técnica
+                        </P>
 
-                <img class="w-50" src="../img/IMG_9762.JPG" alt="">
+                        <h5>NITRATO DE PLATA</h5>
+                        <P>
+                            Nitrato de Plata para uso industrial
+                            Pureza de 99,99 certificada
+                            Concentración de plata 63,5%.
+                            Consulte información técnica
+                        </P>
 
+                        <h5>PLATA PURA</h5>
+                        <p>
+                            Plata en barra, lamina o granulado.
+                            Pureza de 99,99 certificada
+                            Consulte información técnica
+                        </p>
+                    </div>
+                    
 
-                <h4>HILO DE PLATA</h4>
-                <P>
-                    Disponible a partir de Enero 2024
-                    Consulte información técnica
-                </P>
-
-                <h4>NITRATO DE PLATA</h4>
-                <P>
-                    Nitrato de Plata para uso industrial
-                    Pureza de 99,99 certificada
-                    Concentración de plata 63,5%.
-                    Consulte información técnica
-                </P>
-
-                <h4>PLATA PURA</h4>
-                <p>
-                    Plata en barra, lamina o granulado.
-                    Pureza de 99,99 certificada
-                    Consulte información técnica
-                </p>
-
-                <img class="w-50" src="../img/IMG_9784.JPG" alt="">
+                </div>
 
             </section>
 
         </main>
 
         <footer>
-            <div class="contact">
-                <div class="item_contact">
+            <div class="contact row row-cols-1 row-cols-sm-4 m-0">
+                <div class="item_contact col">
                     <i class='bx bx-copyright contact_icon'></i>
                     <h3 class="contact_title">Valoros de colombia SAS</h3>
                 </div>
-                <div class="item_contact">
+                <div class="item_contact col">
                     <i class='bx bx-mail-send contact_icon'></i>
                     <h3 class="contact_title">info@valoros.co</h3>
                     <h3 class="contact_title">Tel.: +604 3629056</h3>
                     <h3 class="contact_title">Cel/wp: +57 3012784797</h3>
                 </div>
-                <div class="item_contact">
+                <div class="item_contact col">
                     <i class='bx bxs-edit-location contact_icon'></i>
                     <h3 class="contact_title">Medellín - Antioquia</h3>
                 </div>
-                <div class="item_contact item_contact--gold">
+                <div class="item_contact item_contact--gold col">
                     <i class='bx bxs-chat contact_icon contact_icon--modifier'></i>
                     <h3 class="contact_title">Contactanos ahora</h3>
                 </div>
