--- a/contenido/sostenibilidad.html
+++ b/contenido/sostenibilidad.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <div class="container">
+    <div class="container p-0">
 
         <!-- logo-menu -->
         <header class="d-flex justify-content-between">
@@ -31,13 +31,13 @@
             <div class="d-none d-sm-flex justify-content-center">
                 <ul class="d-flex h-100">
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="corporativo.html">Corporativo</a>
+                        <a class="nav-link fs-5" href="corporativo.html">Corporativo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active fs-4" href="sostenibilidad.html">Sostenibilidad</a>
+                        <a class="nav-link active fs-5" href="sostenibilidad.html">Sostenibilidad</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="contacto.html">Contáctenos</a>
+                        <a class="nav-link fs-5" href="contacto.html">Contáctenos</a>
                     </li>
                 </ul>
             </div>
@@ -46,10 +46,7 @@
         <!-- logo-menu -->
 
 
-
-
-        <main class="bg-white mx-auto mb-1">
-
+        <main class="mx-auto">
 
             <!-- menu:productos-servicios -->
             <section class="p-0 m-0">
@@ -84,9 +81,9 @@
             </section>
             <!-- fin menu:productos-servicios -->
 
-            <section>
+            <section class="mt-5 px-5">
 
-                <h1>SOSTENIBILIDAD</h1>
+                <h1 class="text-center mb-5">SOSTENIBILIDAD</h1>
 
                 <P>Conscientes de la afectación ambiental y social que genera nuestra actividad empresarial en la cadena
                     productiva de metales preciosos, decidimos apoyar a la Fundación Reverd-Ser entidad sin animo de
@@ -96,49 +93,54 @@
                     poblaciones afectadas por la escasez de recursos.
                 </P>
 
-                <P>Visita Reverd-Ser Fundación</P><a href="">Aquí</a>
+                <div class="d-flex">
+                    <P>Visita Reverd-Ser Fundación&nbsp;</P><a href="https://reverd-serfundacion.com/" target="_blank">Aquí</a>
+                </div>
+                
 
-                <img src="../img/logo-sin-fundacion.jpeg" alt="logo-reverd-ser">
+                <div class="text-center mb-3">
+                    <img class="w-25" src="../img/logo-sin-fundacion.jpeg" alt="logo-reverd-ser">
+                </div>
+                
 
-                <div class="video-container">
+                <div class="video-container text-center">
 
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/EFsl7-UC4ZM?si=6NV2mPR-WDP3iweo"
-                        title="YouTube video player" frameborder="0"
+                        title="video Reverd-Ser" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen>
                     </iframe>
 
                 </div>
-
+                <br>
             </section>
 
 
 
-            <footer>
-                <div class="contact">
-                    <div class="item_contact">
-                        <i class='bx bx-copyright contact_icon'></i>
-                        <h3 class="contact_title">Valoros de colombia SAS</h3>
-                    </div>
-                    <div class="item_contact">
-                        <i class='bx bx-mail-send contact_icon'></i>
-                        <h3 class="contact_title">info@valoros.co</h3>
-                        <h3 class="contact_title">Tel.: +604 3629056</h3>
-                        <h3 class="contact_title">Cel/wp: +57 3012784797</h3>
-                    </div>
-                    <div class="item_contact">
-                        <i class='bx bxs-edit-location contact_icon'></i>
-                        <h3 class="contact_title">Medellín - Antioquia</h3>
-                    </div>
-                    <div class="item_contact item_contact--gold">
-                        <i class='bx bxs-chat contact_icon contact_icon--modifier'></i>
-                        <h3 class="contact_title">Contactanos ahora</h3>
-                    </div>
-                </div>
-            </footer>
-
         </main>
 
+        <footer>
+            <div class="contact row row-cols-1 row-cols-sm-4 m-0">
+                <div class="item_contact col">
+                    <i class='bx bx-copyright contact_icon'></i>
+                    <h3 class="contact_title">Valoros de colombia SAS</h3>
+                </div>
+                <div class="item_contact col">
+                    <i class='bx bx-mail-send contact_icon'></i>
+                    <h3 class="contact_title">info@valoros.co</h3>
+                    <h3 class="contact_title">Tel.: +604 3629056</h3>
+                    <h3 class="contact_title">Cel/wp: +57 3012784797</h3>
+                </div>
+                <div class="item_contact col">
+                    <i class='bx bxs-edit-location contact_icon'></i>
+                    <h3 class="contact_title">Medellín - Antioquia</h3>
+                </div>
+                <div class="item_contact item_contact--gold col">
+                    <i class='bx bxs-chat contact_icon contact_icon--modifier'></i>
+                    <h3 class="contact_title">Contactanos ahora</h3>
+                </div>
+            </div>
+        </footer>
 
     </div>
 
