--- a/contenido/corporativo.html
+++ b/contenido/corporativo.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <div class="container">
+    <div class="container p-0">
 
         <!-- logo-menu -->
         <header class="d-flex justify-content-between">
@@ -32,13 +32,13 @@
             <div class="d-none d-sm-flex justify-content-center">
                 <ul class="d-flex h-100">
                     <li class="nav-item">
-                        <a class="nav-link active fs-4" href="corporativo.html">Corporativo</a>
+                        <a class="nav-link active fs-5" href="corporativo.html">Corporativo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="sostenibilidad.html">Sostenibilidad</a>
+                        <a class="nav-link fs-5" href="sostenibilidad.html">Sostenibilidad</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="contacto.html">Contáctenos</a>
+                        <a class="nav-link fs-5" href="contacto.html">Contáctenos</a>
                     </li>
                 </ul>
             </div>
@@ -46,7 +46,7 @@
         </header>
         <!-- logo-menu -->
 
-        <main class="bg-white mx-auto mb-1">
+        <main class="mx-auto">
 
             <!-- menu:productos-servicios -->
             <section class="p-0 m-0">
@@ -81,154 +81,181 @@
             </section>
             <!-- fin menu:productos-servicios -->
 
+            <section class="mt-5 px-5">
 
-            <section>
-
-
-                <hr class="mt-0">
-                <br>
-                <h1 class="text-center mb-5">Nuestra historia</h1>
+                <h1 class="text-center mb-5">NUESTRA HISTORIA</h1>
 
                 <img class="w-100" src="../img/image00009.jpeg" alt="">
 
-                <p class="fs-5 mb-5">
+                <p class="mb-4 mt-2">
                     Las compañias son el resultado de la mezcla de tres factores humanos fundamentales
                     según su fundador, en nuestro caso; el conocimiento como guia del camino, el espiritu
                     emprendedor como pilar de las nuevas creaciones, la tenacidad para soportar los eventos
                     adversos que desvian el rumbo.
                 </p>
+            </section>
 
-                <div class="circle">
-                    <span class="year">2021</span>
+            <section class="mt-5 px-5">
+
+                <div class="row">
+                    <div class="col-4 d-flex justify-content-center align-items-center">
+                        <div class="circle">
+                            <span class="year">2021</span>
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <div class="box">
+                            <p class="mb-4">
+                                Valoros de Colombia fue creada en el año 2021 con el objetivo de atender la demanda
+                                nacional del sector industrial en la fabricación y comercialización de productos a
+                                partir de metales preciosos, por cierto, una demanda que denominamos con gran potencial
+                                y ciertamente insatisfecha.
+                            </p>
+                        </div>
+
+                        <div class="box">
+                            <p class="mb-4">
+                                En el año 2021, adquirimos la maquinaria y equipos necesarios para desempeñar
+                                nuestra actividad empresarial teniendo en cuenta un nivel de producción proyectado
+                                a mediano plazo, definimos nuestro portafolio de productos y servicios y,
+                                estructuramos el equipo de trabajo para desempeñar las actividades necesarias
+                                tendientes a garantizar un crecimiento empresarial importante.
+                            </p>
+                        </div>
+
+                    </div>
                 </div>
 
-                <div class="box">
-                    <p class="fs-5 mb-5">
-                        Valoros de Colombia fue creada en el año 2021 con el objetivo de atender la demanda
-                        nacional del sector industrial en la fabricación y comercialización de productos a
-                        partir de metales preciosos, por cierto, una demanda que denominamos con gran potencial
-                        y ciertamente insatisfecha.
-                    </p>
+                <hr>
+
+                <div class="row">
+                    <div class="col-4 d-flex justify-content-center align-items-center">
+                        <div class="circle">
+                            <span class="year">2022</span>
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <p class="mb-4">
+                            En el año 2022, iniciamos nuestra gestión comercial a nivel local y nacional
+                            encontrando oportunidades de negocio que permitieron incursionar exitosamente
+                            en el mercado con nuestros productos y servicios, cumpliendo con las expectativas
+                            de nuestros clientes a la vez que mejorarando dia a dia nuestros productos,
+                            servicios y procesos.
+                        </p>
+
+                        <p class="mb-4">
+                            En el año 2022, conscientes del compromiso personal y empresarial decidimos unirnos a
+                            la Fundación Reverd-Ser en la gestión ambiental y social enmarcada en devolver a la
+                            naturaleza y al ser lo que por años el ser humano le ha quitado, de esta manera
+                            logramos dejar huella y camino a las futuras generacionnes mediante proyectos de
+                            reforestación, atención a comunidades vulnerables, entre otros.
+                        </p>
+                    </div>
                 </div>
 
+                <hr>
 
-                <div class="box">
-                    <p class="fs-5 mb-5">
-                        En el año 2021, adquirimos la maquinaria y equipos necesarios para desempeñar
-                        nuestra actividad empresarial teniendo en cuenta un nivel de producción proyectado
-                        a mediano plazo, definimos nuestro portafolio de productos y servicios y,
-                        estructuramos el equipo de trabajo para desempeñar las actividades necesarias
-                        tendientes a garantizar un crecimiento empresarial importante.
-                    </p>
+                <div class="row">
+                    <div class="col-4 d-flex justify-content-center align-items-center">
+                        <div class="circle">
+                            <span class="year">2023</span>
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <p class="mb-4">
+                            En el año 2023, la compañía se enfoca en desarrollar nuevos productos y servicios
+                            que requiera la industria y desarrollar su plan estrategico comercial que le
+                            permitirá seguir creciendo en el mercado nacional.
+                        </p>
+                    </div>
                 </div>
 
-                <div class="circle">
-                    <span class="year">2022</span>
-                </div>
-
-
-                <p class="fs-5 mb-5">
-                    En el año 2022, iniciamos nuestra gestión comercial a nivel local y nacional
-                    encontrando oportunidades de negocio que permitieron incursionar exitosamente
-                    en el mercado con nuestros productos y servicios, cumpliendo con las expectativas
-                    de nuestros clientes a la vez que mejorarando dia a dia nuestros productos,
-                    servicios y procesos.
-                </p>
-
-                <p class="fs-5 mb-5">
-                    En el año 2022, conscientes del compromiso personal y empresarial decidimos unirnos a
-                    la Fundación Reverd-Ser en la gestión ambiental y social enmarcada en devolver a la
-                    naturaleza y al ser lo que por años el ser humano le ha quitado, de esta manera
-                    logramos dejar huella y camino a las futuras generacionnes mediante proyectos de
-                    reforestación, atención a comunidades vulnerables, entre otros.
-                </p>
-
-                <div class="circle">
-                    <span class="year">2023</span>
-                </div>
-
-                <p class="fs-5 mb-5">
-                    En el año 2023, la compañía se enfoca en desarrollar nuevos productos y servicios
-                    que requiera la industria y desarrollar su plan estrategico comercial que le
-                    permitirá seguir creciendo en el mercado nacional.
-                </p>
+                <hr>
 
             </section>
 
-            <section>
+            <!-- mision-vision -->
+            <section class="mt-5 px-5">
 
                 <div class="iconos_sobre_nosotros">
                     <img src="../img/icono_mision.png" alt="icono_mision">
-                    <h2 class="titulo_valores">MISIÓN</h2>
+                    <h3 class="titulo_valores">MISIÓN</h3>
                 </div>
 
-
-                <p class="texto fs-5">
+                <p>
                     Generar excelentes relacionales con nuestros aliados estrategicos mediante la fabricación y
                     comercialización de
                     productos y servicios con enfasís en la alta calidad, confiabilidad, y buen servicio.
                 </p>
 
-                <div class="iconos_sobre_nosotros">
-                    <img src="../img/icono_vision.png" alt="icono_vision">
-                    <h2 class="titulo_valores">VISIÓN</h2>
+                <div class="row align-items-center">
+
+                    <div class="col-12 col-sm-6 order-sm-last mb-3">
+                        <img class="w-100" src="../img/image00013.jpeg" alt="">
+                    </div>
+
+                    <div class="col-12 col-sm-6">
+                        <div class="iconos_sobre_nosotros">
+                            <img src="../img/icono_vision.png" alt="icono_vision">
+                            <h3 class="titulo_valores">VISIÓN</h3>
+                        </div>
+
+                        <p class="texto fs-5">
+                            Realizar nuestro plan de expansión en los mercados internacionales mediante el
+                            establecimiento
+                            de
+                            sedes productivas
+                            en cada continente.
+                        </p>
+
+                        <div class="iconos_sobre_nosotros mb-2">
+                            <img src="../img/icono_valores.png" alt="icono_valores">
+                            <h3 class="titulo_valores">VALORES</h3>
+                        </div>
+
+                        <h4>Respeto: </h4>
+
+                        <p class="texto">
+                            En cada uno de nuestros actos.
+                        </p>
+
+                        <h4>Transparencia: </h4>
+
+                        <p class="texto">
+                            Logrando empatía y entendimiento.
+                        </p>
+
+                        <h4>Responsabilidad: </h4>
+
+                        <p class="texto">
+                            Con nuestros aliados, la naturaleza y el entorno.
+                        </p>
+
+                    </div>
+                   
                 </div>
-
-                <p class="texto fs-5">
-                    Realizar nuestro plan de expansión en los mercados internacionales mediante el establecimiento
-                    de
-                    sedes productivas
-                    en cada continente.
-                </p>
-
-                <div class="iconos_sobre_nosotros mb-2">
-                    <img src="../img/icono_valores.png" alt="icono_valores">
-                    <h2 class="titulo_valores">VALORES</h2>
-                </div>
-
-
-                <h3>Respeto: </h3>
-
-                <p class="texto fs-5">
-                    En cada uno de nuestros actos.
-                </p>
-
-                <h3>Transparencia: </h3>
-
-                <p class="texto fs-5">
-                    Logrando empatía y entendimiento.
-                </p>
-
-
-                <h3>Responsabilidad: </h3>
-
-                <p class="texto fs-5">
-                    Con nuestros aliados, la naturaleza y el entorno.
-                </p>
-
-                <img class="w-50" src="../img/image00013.jpeg" alt="">
 
             </section>
 
         </main>
 
         <footer>
-            <div class="contact">
-                <div class="item_contact">
+            <div class="contact row row-cols-1 row-cols-sm-4 m-0">
+                <div class="item_contact col">
                     <i class='bx bx-copyright contact_icon'></i>
                     <h3 class="contact_title">Valoros de colombia SAS</h3>
                 </div>
-                <div class="item_contact">
+                <div class="item_contact col">
                     <i class='bx bx-mail-send contact_icon'></i>
                     <h3 class="contact_title">info@valoros.co</h3>
                     <h3 class="contact_title">Tel.: +604 3629056</h3>
                     <h3 class="contact_title">Cel/wp: +57 3012784797</h3>
                 </div>
-                <div class="item_contact">
+                <div class="item_contact col">
                     <i class='bx bxs-edit-location contact_icon'></i>
                     <h3 class="contact_title">Medellín - Antioquia</h3>
                 </div>
-                <div class="item_contact item_contact--gold">
+                <div class="item_contact item_contact--gold col">
                     <i class='bx bxs-chat contact_icon contact_icon--modifier'></i>
                     <h3 class="contact_title">Contactanos ahora</h3>
                 </div>
