--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <!-- fin aside oculto -->
 
 
-    <div class="container">
+    <div class="container p-0">
 
         <!-- logo-menu -->
-        <header class="d-flex justify-content-between">
+        <header class="d-flex justify-content-between m-0 p-0">
 
 
             <a href="index.html">
@@ -59,13 +59,13 @@
             <div class="d-none d-sm-flex justify-content-center">
                 <ul class="d-flex h-100">
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="contenido/corporativo.html">Corporativo</a>
+                        <a class="nav-link fs-5" href="contenido/corporativo.html">Corporativo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="contenido/sostenibilidad.html">Sostenibilidad</a>
+                        <a class="nav-link fs-5" href="contenido/sostenibilidad.html">Sostenibilidad</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="contenido/contacto.html">Contáctenos</a>
+                        <a class="nav-link fs-5" href="contenido/contacto.html">Contáctenos</a>
                     </li>
                 </ul>
             </div>
@@ -73,7 +73,7 @@
         </header>
         <!-- logo-menu -->
 
-        <main class="bg-white mx-auto mb-1">
+        <main class="mx-auto">
 
             <!-- menu:productos-servicios -->
             <section class="p-0 m-0">
@@ -81,13 +81,9 @@
                     <ul class="p-0 m-0">
 
                         <li class="has-submenu">
-                            <a class="h-100 p-2" href="#">
+                            <a class="h-100 p-2 d-flex" href="#">
                                 Productos
-                                <svg style="fill: white" xmlns="http://www.w3.org/2000/svg" height="1em"
-                                    viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                                    <path
-                                        d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z" />
-                                </svg>
+                                <i class='bx bx-chevron-down fs-2'></i>                               
                             </a>
                             <ul class="submenu">
                                 <li>
@@ -120,9 +116,9 @@
             <!-- presentation -->
             <section class="mt-5 px-5">
 
-                <h1 class="text-center mb-5 title">BIENVENIDOS A VALOROS DE COLOMBIA</h1>
+                <h1 class="text-center mb-5">BIENVENIDOS A VALOROS DE COLOMBIA</h1>
 
-                <p class="fs-5 mb-5">
+                <p class="mb-5">
                     Somos una compañía dedicada a la industrialización de productos a partir de
                     metales preciosos, con procesos productivos tecnificados, sostenibles
                     ambientalmente y un equipo humano altamente capacitado.
@@ -135,14 +131,14 @@
             <!-- fin presentation -->
 
             <!-- image+presentation -->
-            <section class="row mb-5 px-5">
+            <section class="row mb-5 px-5 m-0">
 
                 <div class="col-12 col-lg-6 mb-3">
                     <img style="border-radius: 5px;" src="img/Oro-plata.png" class="d-block w-100" alt="..." />
                 </div>
 
                 <div class="col-12 col-lg-5 d-flex align-items-center ">
-                    <p class="fs-5">
+                    <p>
                         En VALOROS DE COLOMBIA trabajamos con la convicción de que nuestra oferta de
                         valor involucre no solo competitividad sino, el acompañamiento permanente con
                         transparencia, responsabilidad y legalidad; generando relaciones de mutuo beneficio.
@@ -153,7 +149,7 @@
 
 
             <!-- croquis-contacta -->
-            <section>
+            <section class="row mb-5 px-5 m-0">
                 <div class="row">
 
                     <div class="col-12 col-sm-7 mb-3">
@@ -162,12 +158,12 @@
 
                     <div class="col-12 col-sm-5 d-flex align-items-center justify-content-center">
                         <div>
-                            <h3 class="text-center bg-warning">Contacta con nosotros</h3>
+                            <h3 class="text-center" style="color: #F3B830;">Contacta con nosotros</h3>
 
-                            <div class="text-center social_div">
-                                <a href="#"><img style="width: 3em;" src="img/facebook.svg" alt="facebook" /></a>
-                                <a href="#"><img style="width: 3em;" src="img/insta.svg" alt="whatsapp" /></a>
-                                <a href="#"><img style="width: 3em;" src="img/whatsapp-black.svg" alt="whatsapp" /></a>
+                            <div class="text-center">
+                                <a  href="#"><img class="social-icon" src="img/facebook.svg" alt="facebook" /></a>
+                                <a  href="#"><img class="social-icon" src="img/insta.svg" alt="whatsapp" /></a>
+                                <a  href="#"><img class="social-icon" src="img/whatsapp-black.svg" alt="whatsapp" /></a>
                             </div>
                         </div>
                     </div>
@@ -203,22 +199,22 @@
         </footer> -->
 
         <footer>
-            <div class="contact">
-                <div class="item_contact">
+            <div class="contact row row-cols-1 row-cols-sm-4 m-0">
+                <div class="item_contact col">
                     <i class='bx bx-copyright contact_icon'></i>
                     <h3 class="contact_title">Valoros de colombia SAS</h3>
                 </div>
-                <div class="item_contact">
+                <div class="item_contact col">
                     <i class='bx bx-mail-send contact_icon'></i>
                     <h3 class="contact_title">info@valoros.co</h3>
                     <h3 class="contact_title">Tel.: +604 3629056</h3>
                     <h3 class="contact_title">Cel/wp: +57 3012784797</h3>
                 </div>
-                <div class="item_contact">
+                <div class="item_contact col">
                     <i class='bx bxs-edit-location contact_icon'></i>
                     <h3 class="contact_title">Medellín - Antioquia</h3>
                 </div>
-                <div class="item_contact item_contact--gold">
+                <div class="item_contact item_contact--gold col">
                     <i class='bx bxs-chat contact_icon contact_icon--modifier'></i>
                     <h3 class="contact_title">Contactanos ahora</h3>
                 </div>
